--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
   </div>
   
   <div class="bg-orange-800 text-center text-sm py-4 mt-8">
-    <p>&copy; 2025 All Rights Reserved By Diskominfo Kota Mojokerto.</p>
+    <p>&copy; 2025 All Rights Reserved By Firas Rasendriya.</p>
   </div>
 </footer>
 
